--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,6 @@
 {{ define "content" }}
 
-<form class="form-signin center" role="form" action="/authenticate" method="post">
+<form class="form-signin center" role="form" action="/login" method="post">
   <h2 class="form-signin-heading">
     <i class="fa fa-comments-o">
       ChitChat
