modified templates to support separated logics

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {{ define "content" }}
 <p class="lead">
-  <a href="/thread/create">Start a thread</a> or join one below!
+  <a href="/thread/new">Start a thread</a> or join one below!
 </p>
 
 {{ range . }}
