--- a/templates/private.thread.html
+++ b/templates/private.thread.html
@@ -23,7 +23,7 @@
 
   <div class="panel panel-info">
     <div class="panel-body">
-     <form role="form" action="/thread/read" method="post">
+     <form role="form" action="/thread/post" method="post">
        <div class="form-group">
          <textarea class="form-control" name="body" id="body" placeholder="Write your reply here" rows="3"></textarea>
          <input type="hidden" name="id" value="{{ .Id }}">
