--- a/templates/public.thread.html
+++ b/templates/public.thread.html
@@ -2,7 +2,7 @@
 
 <div class="panel panel-default">
   <div class="panel-heading">
-    <span class="lead"> <i class="fa fa-comment-o"></i> {{ .Topic }}</span>
+    <span class="lead"> <i class="fa fa-comment-o"></i> {{ .TopicHTML }}</span>
     <div class="pull-right">
       Started by {{ .User.UserName }} - {{ .CreatedAt}}
     </div>
